# SparkJob

./: README.md  pyproject.toml  python-spark-etl.Dockerfile  run_job.py
best_practice_etl/io/: readers.py  writers.py
best_practice_etl/jobs/: base_spark_job.py  constants.py  process.py
best_practice_etl/transforms/: instance_transformation.py  resource_transformation.py  s3Bucket_transformation.py  transformation_factory.py
input/: test.parquet
output/: result.json
src/io/: readers.py  writers.py
src/jobs/: process.py
src/transforms/: instance_transformation.py  s3Bucket_transformation.py  transformation_factory.py
tests/: test_s3bucket_transformation.py
